z-index fixes

--- a/src/components/ui/page-banner/page-banner.css
+++ b/src/components/ui/page-banner/page-banner.css
@@ -31,6 +31,7 @@
 .page-banner--video1 {
   width: 100%;
   object-fit: cover;
+  z-index: -1;
 }
 
 .page-banner--video1 source {
